<resources>
    <string name="app_name">Small Business</string>
    <string name="header_title">My Coffee Shop</string>
    <string name="header_description">Hot espresso with wonderfull taste</string>
    <string name="address">Luxor - Abo El-Hagag Square</string>
    <string name="number">01145525919</string>
    <string name="callBtn">call</string>
    <string name="link">fb.com/lionmaax</string>
    <string name="hint">Write a comment...</string>
    <dimen name="imageHeight">273dp</dimen>
    <dimen name="headerMarginTop">2dp</dimen>
    <dimen name="title">30dp</dimen>
    <dimen name="descAddressNumEmail">20dp</dimen>
    <dimen name="headerPaddingLeft">20dp</dimen>
    <dimen name="detailMarginleft">10dp</dimen>
    <dimen name="detailMarginTop">50dp</dimen>
    <dimen name="iconsWidthHeight">50dp</dimen>
    <dimen name="iconsMarginTop">30dp</dimen>
    <dimen name="callBtnWidth">60dp</dimen>
    <dimen name="callBtnHeight">40dp</dimen>
    <dimen name="callBtnMargin">50dp</dimen>
    <dimen name="editTextPadding">10dp</dimen>
    <dimen name="editTextWidth">300dp</dimen>
    <dimen name="editTextHeight">50dp</dimen>
    <dimen name="editTextMarginTop">20dp</dimen>
    <dimen name="sendWidthHeight">50dp</dimen>
    <dimen name="sendMarginLeft">30dp</dimen>
    <dimen name="sendMarginTop">20dp</dimen>
    <dimen name="bodyPaddingLeft">10dp</dimen>
    <dimen name="bodyPaddingTop">30dp</dimen>
    <dimen name="bodyMarginTop">4dp</dimen>
</resources>
