<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageHeight"
        android:src="@drawable/coffe_cover"/>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/cover"
        android:paddingLeft="@dimen/headerPaddingLeft"
        android:background="@drawable/title"
        android:layout_marginTop="@dimen/headerMarginTop">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_title"
            android:textSize="@dimen/title"
            android:textColor="@color/titleColor"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_description"
            android:textSize="@dimen/descAddressNumEmail"
            android:textColor="@color/descColor"
            android:fontFamily="sans-serif-medium"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_marginTop="@dimen/bodyMarginTop"
        android:background="@drawable/body"
        android:paddingLeft="@dimen/bodyPaddingLeft"
        android:paddingTop="@dimen/bodyPaddingTop">

        <ImageView
            android:id="@+id/location_logo"
            android:layout_width="@dimen/iconsWidthHeight"
            android:layout_height="@dimen/iconsWidthHeight"
            android:src="@drawable/ic_place_grey_24dp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/detailMarginleft"
            android:layout_toRightOf="@+id/location_logo"
            android:fontFamily="casual"
            android:text="@string/address"
            android:textColor="@color/detailColor"
            android:textSize="@dimen/descAddressNumEmail"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/phone_logo"
            android:layout_width="@dimen/iconsWidthHeight"
            android:layout_height="@dimen/iconsWidthHeight"
            android:layout_below="@id/location_logo"
            android:layout_marginTop="@dimen/iconsMarginTop"
            android:src="@drawable/ic_phone_grey_24dp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_marginLeft="@dimen/detailMarginleft"
            android:layout_marginTop="@dimen/detailMarginTop"
            android:layout_toRightOf="@+id/phone_logo"
            android:fontFamily="casual"
            android:text="@string/number"
            android:textColor="@color/detailColor"
            android:textSize="@dimen/descAddressNumEmail"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/callBtn"
            android:layout_width="@dimen/callBtnWidth"
            android:layout_height="@dimen/callBtnHeight"
            android:text="@string/callBtn"
            android:layout_below="@+id/location"
            android:layout_toRightOf="@+id/phone"
            android:layout_marginTop="@dimen/callBtnMargin"
            android:layout_marginLeft="@dimen/callBtnMargin"
            android:background="@color/callBtnColor"/>

        <ImageView
            android:id="@+id/link_logo"
            android:layout_width="@dimen/iconsWidthHeight"
            android:layout_height="@dimen/iconsWidthHeight"
            android:layout_below="@id/phone_logo"
            android:layout_marginTop="@dimen/iconsMarginTop"
            android:src="@drawable/ic_public_black_24dp" />

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/detailMarginleft"
            android:layout_marginTop="@dimen/detailMarginTop"
            android:layout_toRightOf="@+id/link_logo"
            android:layout_below="@id/phone"
            android:fontFamily="casual"
            android:text="@string/link"
            android:textSize="@dimen/descAddressNumEmail"
            android:textStyle="bold"
            android:autoLink="web"
            android:linksClickable="true"/>

        <EditText
            android:id="@+id/writeComment"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="@dimen/editTextHeight"
            android:layout_below="@id/link_logo"
            android:layout_marginTop="@dimen/editTextMarginTop"
            android:padding="@dimen/editTextPadding"
            android:background="@drawable/comment_border"
            android:hint="@string/hint"/>

        <ImageView
            android:id="@+id/sentComment"
            android:layout_width="@dimen/sendWidthHeight"
            android:layout_height="@dimen/sendWidthHeight"
            android:layout_below="@+id/link_logo"
            android:layout_toRightOf="@+id/writeComment"
            android:layout_marginLeft="@dimen/sendMarginLeft"
            android:layout_marginTop="@dimen/sendMarginTop"
            android:src="@drawable/ic_send_black_24dp"/>
    </RelativeLayout>

</RelativeLayout>